syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

// The definition of discount request
service DiscountProtoService{

	rpc GetDiscount(GetDiscountRequest) returns (CouponModel);
	rpc CreateDiscount(CreateDiscountRequest) returns (CouponModel);
	rpc UpdateDiscount(UpdateDiscountRequest) returns (CouponModel);
	rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountRequest);

}

message GetDiscountRequest{
	string productName = 1;
}

message CouponModel{
	int32 id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}

message CreateDiscountRequest{
	CouponModel coupon = 1;
}

message UpdateDiscountRequest{
	CouponModel coupon = 1;
}

message DeleteDiscountRequest{
	bool success = 1;
}